WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83425
Viewport-percentage Length units does not work for Replaced elements size
https://bugs.webkit.org/show_bug.cgi?id=83425
Summary
Viewport-percentage Length units does not work for Replaced elements size
Joe Thomas
Reported
2012-04-07 10:20:47 PDT
Size of the replaced elements cannot be specified using viewport-percentage length units like vw, vh and vmin.
Attachments
ProposedPatch
(6.29 KB, patch)
2012-04-07 10:36 PDT
,
Joe Thomas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joe Thomas
Comment 1
2012-04-07 10:36:56 PDT
Created
attachment 136134
[details]
ProposedPatch
Antti Koivisto
Comment 2
2012-04-14 13:52:17 PDT
Comment on
attachment 136134
[details]
ProposedPatch r=me
WebKit Review Bot
Comment 3
2012-04-14 14:29:23 PDT
Comment on
attachment 136134
[details]
ProposedPatch Clearing flags on attachment: 136134 Committed
r114208
: <
http://trac.webkit.org/changeset/114208
>
WebKit Review Bot
Comment 4
2012-04-14 14:29:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug