Viewport-percentage Length units does not work for Replaced elements size https://bugs.webkit.org/show_bug.cgi?id=83425

Patch by Joe Thomas <joethomas@motorola.com> on 2012-04-14
Reviewed by Antti Koivisto.

Added the support for viewport-percentage length units while calculating the width/height of replaced elements.

Source/WebCore:

Tests: css3/viewport-percentage-lengths/viewport-percentage-image-size.html

* platform/Length.h:
(WebCore::Length::isSpecified):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalWidthUsing):

LayoutTests:

* css3/viewport-percentage-lengths/resources: Added.
* css3/viewport-percentage-lengths/resources/colorsquare.png: Added.
* css3/viewport-percentage-lengths/viewport-percentage-image-size-expected.html: Added.
* css3/viewport-percentage-lengths/viewport-percentage-image-size.html: Added.

Canonical link: https://commits.webkit.org/101484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114208 268f45cc-cd09-0410-ab3c-d52691b4dbfc